# ml-kata

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
.github/workflows/: test.yml
kata01/: README.md  ce.py  ce_test.py  cross_entropy.py  cross_entropy_test.py  linear.py  linear_test.py  relu_test.py
kata01/sol/: cross_entropy.py  linear.py  relu.py
kata02/: README.md  dataset.py  dataset_test.py  mlp.py  mlp_test.py  run.ipynb  run_mnist.ipynb  train.py  train_test.py
kata02/sol/: dataset.py  mlp.py  train.py
kata03/: README.md  logistic.py  logistic_test.py  soft_logistic.py  soft_logistic_test.py
kata03/sol/: logistic.py  soft_logistic.py
kata04/: README.md  rnn.py  rnn_test.py
kata04/sol/: rnn.py
kata05/: README.md  attention.py  attention_test.py
kata05/sol/: attention.py
kata06/: README.md  optimizers.py  optimizers_test.py
kata06/sol/: optimizers.py
kata07/: mha.py  mha_test.py
kata07/sol/: mha.py
kata08/: README.md  softmax.py  softmax_test.py
kata08/sol/: softmax.py
kata09/: roberta.py  roberta_test.py
kata09/sol/: roberta.py
kata1/: README.md  ce.py  ce_test.py  linear.py  linear_test.py  relu.py  relu_test.py
kata10/: README.md  gpt2.py  gpt2_test.py
kata10/sol/: gpt2.py
kata11/: README.md  llama.py  llama_test.py
kata11/sol/: llama.py
kata12/: README.md  grpo.py  maze_env.py  mcts.py  models.py  ppo.py  types.py  vpg.py
kata12/sols/spinningup/: core.py  ppo.py
kata13/: README.md  args.py  moe.py  moe_test.py
kata13/sol/: deepseek_moe.py  moe.py
kata14/: README.md  run.ipynb  run_mnist.ipynb  train.py  train_test.py
kata14/sol/: train.py
kata2/: README.md  dataset.py  dataset_test.py  mlp.py  mlp_test.py  run_mnist.ipynb  train.py
kata3/: README.md  logistic.py  logistic_test.py
kata4/: README.md  rnn.py  rnn_test.py
kata5/: attention.py  attention_test.py
kata6/: README.md  optimizers.py  optimizers_test.py
kata7/: README.md  mha_test.py
kata8/: softmax_test.py
kata9/: README.md  roberta_test.py
kata9/sol/: roberta.py
