
[project]
name = "ml-kata"
version = "0.0.0"
description = "ML Kata project"
readme = "README.md"
requires-python = ">=3.10,<3.11"

dependencies = [
  "numpy==1.23.5",
  "pip==23.1.2",
  "tqdm==4.66.1",
  "datasets==2.15.0",
  "tokenizers==0.13.3",
  "transformers==4.32.1",
  "evaluate",
  "scikit-learn==1.2.2",
  "matplotlib==3.7.1",
  "ipykernel==6.15.0",
  "ipywidgets==7.7.1",
  "wandb==0.12.2",
  "black==22.6.0",
  "torchviz==0.0.2",
]

[project.optional-dependencies]
cpu = [
  "torch==2.1.0",
]
cu124 = [
  "torch>=2.3.0",
]
macos = [
  "torch==2.1.0",
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu124" },
    { extra = "macos" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu124", extra = "cu124" },
  { index = "pytorch-cpu", extra = "macos" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
