
[project]
name = "ml-kata"
version = "0.0.0"
description = "ML Kata project"
readme = "README.md"
requires-python = ">=3.10,<3.11"

dependencies = [
  "numpy==1.23.5",
  "pip==23.1.2",
  "tqdm==4.66.1",
  "datasets==2.15.0",
  "tokenizers",
  "transformers==4.57.0",
  "evaluate",
  "scikit-learn==1.2.2",
  "matplotlib==3.7.1",
  "ipykernel==6.15.0",
  "ipywidgets==7.7.1",
  "wandb==0.12.2",
  "black==22.6.0",
  "torchviz==0.0.2",
  "torch>=2.4.0; platform_machine != 'x86_64' or sys_platform != 'darwin'",
  "torch==2.2.0; platform_machine == 'x86_64' and sys_platform == 'darwin'",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "platform_machine == 'x86_64' and sys_platform == 'darwin'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
